adding mobile styles

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,12 @@
 
     <header>
         <div class="grid">
-            <div class="grid-12">
+            <div class="grid-6">
+                <div class="logo">
+                    <a href="/">areximacha.com</a>
+                </div>
+            </div>
+            <div class="grid-6">
                 <ul class="main-nav">
                     <li><a href="#" data-nav="profile">Profile</a></li>
                     <li><a href="#" data-nav="work">Work</a></li>
@@ -61,6 +66,7 @@
         <div class="grid">
             <div class="grid-6">
                 <div class="selector-work">
+                    <h3>Selected work</h3>
                     <ul>
                         <li class="dulux active"><a href="#" data-project="trade"></a></li>
                         <li class="chivas"><a href="#" data-project="venture"></a></li>
@@ -80,7 +86,7 @@
                         <li class="venture">
                             <h3>Chivas - The Venture</h3>
                             <p>Functioned as a member of the front end development team for this project.</p>
-                            <p>The Drum 2015 awarded AF for The Venture, including Grand Prix, Best Content Marketing Tech Platform, Best Use of Mobile Content and Best Integrated Cross-Channel Cross Media and a nomination on Best Use of Content on Social Platform.</p>
+                            <p>The Drum 2015 awarded The Venture Best Content Marketing Tech Platform, Best Use of Mobile Content and Best Integrated Cross-Channel Cross Media and a nomination on Best Use of Content on Social Platform.</p>
                             <p><a href="https://www.theventure.com/global/en/" target="_blank">See project ></a></p>
                         </li>
                         <li class="daretoshare">
@@ -108,9 +114,8 @@
     <section class="section-contact">
         <div class="grid">
             <div class="grid-8 offset-2">
-                <h2>Contact me</h2>
-
                 <div class="contact-container">
+                    <h2>Contact me</h2>
 
                     <ul>
                         <li>
