adding a mobile nav

--- a/www/index.html
+++ b/www/index.html
@@ -19,11 +19,18 @@
                 </div>
             </div>
             <div class="grid-6">
-                <ul class="main-nav">
-                    <li><a href="#" data-nav="profile">Profile</a></li>
-                    <li><a href="#" data-nav="work">Work</a></li>
-                    <li><a href="#" data-nav="contact">Contact</a></li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li><a href="#" data-nav="profile">Profile</a></li>
+                        <li><a href="#" data-nav="work">Work</a></li>
+                        <li><a href="#" data-nav="contact">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="mobile-nav-btn">
+                    <div class="hamburger-icon bun-top"></div>
+                    <div class="hamburger-icon patty"></div>
+                    <div class="hamburger-icon bun-bottom"></div>
+                </div>
             </div>
         </div>
     </header>
@@ -183,7 +190,13 @@
         </div>
     </section>
 
-    <footer></footer>
+    <footer>
+        <div class="grid">
+            <div class="grid-12">
+                <p><small>© 2016 Jay Tang</small></p>
+            </div>
+        </div>
+    </footer>
 
     <script type="text/javascript" src="_includes/js/vendor/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="_includes/js/main.js"></script>
