--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link href='_includes/css/main.css' rel='stylesheet' type='text/css'>
+
+    <link rel="shortcut icon" href="_includes/img/favicon.ico">
 </head>
 <body>
 
