--- a/www/index.html
+++ b/www/index.html
@@ -37,8 +37,8 @@
         </div>
     </header>
 
-    <div class="hero-container">
-    <div class="overlay"></div>
+    <div class="hero-container parallax">
+        <div class="overlay"></div>
         <div class="grid">
             <div class="grid-12">  
                 <div class="neon-outer flicker">
