--- a/www/index.html
+++ b/www/index.html
@@ -90,23 +90,23 @@
                     <ul>
                         <li class="trade active">
                             <h3>Dulux - Various projects</h3>
-                            <p>Various projects across the Dulux brand from microsite, campaign and prototype builds to updates and maintenance work. Functioned in various capacities across projects.</p>
+                            <p>Various projects across the Dulux brand from microsite, campaign and prototype builds to updates and maintenance work. Functioned in various capacities across projects including streamlining processes, upgrades, updates and microsite builds on these JSP and Sass based platforms.</p>
                         </li>
                         <li class="venture">
                             <h3>Chivas - The Venture</h3>
-                            <p>Functioned as a member of the front end development team for this project.</p>
-                            <p>The Drum 2015 awarded The Venture Best Content Marketing Tech Platform, Best Use of Mobile Content and Best Integrated Cross-Channel Cross Media and a nomination on Best Use of Content on Social Platform.</p>
+                            <p>Functioned as a member of the front end development team to deliver this award winning platform.</p>
+                            <p>Tthe front-end was entirely custom built using Grunt, Sass and predominantly vanilla JavaScript which was integrated into a Symphony2 back-end.</p>
                             <p><a href="https://www.theventure.com/global/en/" target="_blank">See project ></a></p>
                         </li>
                         <li class="daretoshare">
                             <h3>Sainsbury's - Dare to Share</h3>
                             <p>Dare to Share Facebook application for Sainsbury's 2014 Christmas campaign. Users send virtual Christmas gifts to randomly selected friends with the chance to win real world prizes.</p>
-                            <p>Worked closely with design team to translate their vision to the finished application.</p>
+                            <p>Worked closely with design team to translate their vision to the finished application using a bespoke boilerplate utilising Grunt, Sass and JQuery.</p>
                         </li>
                         <li class="wlty">
                             <h3>Pandora - Wherever Life Takes You</h3>
                             <p>Front end developer on Facebook application for Pandora's 'Wherever Life Takes you' campaign.</p>
-                            <p>Built front end using backbone.</p>
+                            <p>Built front end using Backbone.js and complex CSS3 transitions to achieve an ambitious animated design.</p>
                             <p><a href="https://whereverlifetakesyou.pandora.net/" target="_blank">See project ></a></p>
                         </li>
                         <li class="clubseat">
