fixing minor typo

--- a/www/index.html
+++ b/www/index.html
@@ -95,7 +95,7 @@
                         <li class="venture">
                             <h3>Chivas - The Venture</h3>
                             <p>Functioned as a member of the front end development team to deliver this award winning platform.</p>
-                            <p>Tthe front-end was entirely custom built using Grunt, Sass and predominantly vanilla JavaScript which was integrated into a Symphony2 back-end.</p>
+                            <p>The front-end was entirely custom built using Grunt, Sass and predominantly vanilla JavaScript which was integrated into a Symphony2 back-end.</p>
                             <p><a href="https://www.theventure.com/global/en/" target="_blank">See project ></a></p>
                         </li>
                         <li class="daretoshare">
